# moeval

./: Cargo.toml  LICENSE  README.md
examples/: hello.rs
src/: ast.rs  codegen.rs  compiler.rs  error.rs  eval.rs  grammar.pest  instruction.rs  interpreter.rs  ir.rs  irbuilder.rs  lexer.rs  lib.rs  object.rs  opcode.rs  parser.rs  tokenizer.rs  types.rs  value.rs  vm.rs
src/ast/: ast.rs  grammar.pest  interpreter.rs  parser.rs
src/compiler/: ast.rs  compiler.rs  exprrewriter.rs  grammar.pest  irbuilder.rs  irbuilder2.rs  irmodule.rs  mod.rs  parser.rs  virtregrewriter.rs
src/ir/: builder.rs  instpass.rs  instruction.rs  interpreter.rs  types.rs
src/vm/: environment.rs  eval.rs  interpreter.rs  object.rs  stack.rs  value.rs
tests/: eval.rs  interpreter.rs
