[package]
name = "moexpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
indexmap = "2.2"
log = "0.4"
pest = "2"
pest_derive = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
env_logger = "0.11"
reqwest = "0.12"
