[package]
name = "moeval"
version = "0.1.0-alpha"
edition = "2021"
authors = ["zzzdong <kuwater@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/moeval"
homepage = "https://github.com/zzzdong/moeval"
documentation = "https://docs.rs/moeval/"
description = """
a toy interpreter
"""
categories = ["asynchronous", "network-programming"]
keywords = ["eval", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
indexmap = "2.2"
log = "0.4"
pest = "2"
pest_derive = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
env_logger = "0.11"
reqwest = "0.12"
